--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.3.1",
     "connect-history-api-fallback": "^1.6.0",
     "css-loader": "^2.1.1",
+    "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0",
