--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "image-webpack-loader": "^4.6.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.15.0",
     "react-bootstrap": "^1.0.0-beta.6",
